stopgap method of adding data, slow network tolerance
Forms for adding data are wrapped in an iframe so they won't
hijack the page. Added checks that map and feature images are loaded
before trying to draw them.

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     top: 5px;
     left: 810px;
 }
-#addFeature {
+#addData {
     position: absolute;
     top: 225px;
     left: 810px;
